# PreciseSchedule

./: .gitignore  README.md
backend/: Cargo.toml  README.md  app.js  package-lock.json  package.json
backend/api/controllers/: deliver-contact-form-message.js
backend/api/controllers/entrance/: confirm-email.js  signup.js  view-new-password.js
backend/api/helpers/: send-template-email.js
backend/api/hooks/custom/: index.js
backend/assets/: .eslintrc
backend/config/: models.js  routes.js  session.js
backend/migrations/2021-01-10-023528_create_gender_enum/: up.sql
backend/migrations/2021-01-10-023649_create_user_profile/: down.sql
backend/migrations/2021-02-06-195947_remove_enum_from_gender/: up.sql
backend/migrations/2021-02-06-202036_change_gender_to_varchar/: up.sql
backend/scripts/: rebuild-cloud-sdk.js
backend/src/: controller.rs  main.rs  main.ts  routes.rs  usuario_service.rs
backend/src/Core/Authorization/: Authorization.spec.ts  Authorization.ts
backend/src/app/: app.module.ts
backend/src/core/: database.rs
backend/src/core/criptography/: criptography.rs
backend/src/core/database/: connection.rs  models.rs  posts.rs  schema.rs  user.rs
backend/src/user/: user.builder.ts  user.controller.spec.ts  user.controller.ts  user.dto.ts  user.entity.ts  user.module.ts  user.service.ts
backend/tasks/: pipeline.js
backend_rust/: .env  Cargo.toml  diesel.toml
backend_rust/docs/: Cargo.toml
backend_rust/src/: core.rs  main.rs  routes.rs
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/public/: index.html  (+1 more)
(+214 files in other folders)
