[package]
name = "backend"
version = "0.1.0"
authors = ["Joao-Arthur <joao.lothamer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket_cors = "0.5.1"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]