[package]
name = "backend"
version = "0.1.0"
authors = ["Joao-Arthur <joao.lothamer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket = "0.4.6"
rocket_cors = "0.5.1"
diesel = { version = "1.4.4", features = ["postgres"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
ring = "0.16.20"
data-encoding = "2.3.2"
chrono = "0.4"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]
